Fix OpenAi chat history builder.